# merkle-tree-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  k6-bench.js  k6-load-test.js
benches/: api_benchmark.rs  api_concurrency_benchmark.rs  plot_benchmark.rs  sparse_tree_complexity_benchmark.rs  tree_implementation_benchmark.rs
criterion/add_leaf/base/: benchmark.json
criterion/add_leaf/change/: estimates.json
criterion/add_leaf/new/: tukey.json
criterion/add_leaf/report/: index.html
criterion/add_leaves_batch/10/base/: tukey.json
criterion/add_leaves_batch/10/change/: estimates.json
criterion/add_leaves_batch/10/new/: benchmark.json  sample.json
criterion/add_leaves_batch/10/report/: index.html
criterion/add_leaves_batch/100/base/: benchmark.json  sample.json  tukey.json
criterion/add_leaves_batch/100/new/: estimates.json
criterion/add_leaves_batch/100/report/: index.html
criterion/add_leaves_batch/50/base/: benchmark.json  estimates.json
criterion/benchmarks/: index.html
criterion/benchmarks/report/: index.html
criterion/get_root/base/: tukey.json
criterion/get_root/new/: benchmark.json
criterion/get_root/report/: index.html
criterion/report/: index.html
docs/: AI_PROMPTS.md  BENCH.md
docs/benchmarks/: 23_07_2025.txt
examples/: sparse_complexity_demo.rs  sparse_test.rs
scripts/: fix-benchmark-links.sh
src/: lib.rs  lmdb_tree.rs  main.rs  merkle_tree.rs  optimized_sparse_tree.rs  patricia_merkle.rs  sparse_merkle_tree.rs  storage.rs  verkle_tree.rs
tests/: concurrency.rs  lmdb_tree.rs  storage.rs  unit.rs
(+29 files in other folders)
