[package]
name = "merkle-tree-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "merkle_tree_api"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
bincode = "1.3.3"
hex = "0.4.3"
lmdb = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
sha3 = "0.10.8"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }

[dev-dependencies]
criterion = { version = "0.6", features = ["async_futures"] }
reqwest = { version = "0.12.22", features = ["json"] }
rand = "0.9.2"
serde_json = "1.0.141"
tempfile = "3.8.1"

[[bench]]
name = "api_benchmark"
harness = false

[[bench]]
name = "plot_benchmark"
harness = false

